1.) fixed IE explorer bug (collapse/expand works now as expected) 2.) Added hand cursor when mouse over navigation box 3.) Added hover color scheme for navigation links (red on hover) 4.) unified the collapse/expand icon.     I tried several choices. As ever it will be a matter of taste.     As most of you like the +/- symbolic i adapted the icons     accordingly.     I don't like it very much, because for me these icons have different     meaning (i would expect expansion/collapse of the navigation box     itself here. what about using boldface for visible segments and     regular size for invisibles ?
    If you want to experiment, edit the file
    
        WEB_INF/templates/navigations/issues.vm

    The top two lines define the active collapse and expand icons.
    In the following lines i added some alternative icon pairs.
    Try them out if you are curious.
5.) Capitalized all items in the Navigation box
6.) Cleaned up the hint-text under the stacked/single toggle
7.) Changed the delay time for the display of the hint from 2 seconds
    to one second.
8.) Added number of segment items to issue navigation box.
9.) Added global expand/collapse to issue navigation box.


git-svn-id: http://scarab.tigris.org/svn/scarab@9822 3c7165bb-d2ef-0310-b724-bafd9a86081f

--- a/trunk/src/webapp/style/scarab.css
+++ b/trunk/src/webapp/style/scarab.css
@@ -191,10 +191,12 @@ padding-left: 1em;
 
 .scarab-toolgroup a, .scarab-toolgroup a:visited,
 .scarab-toolgroup a:active, .scarab-toolgroup a:link,
-
-.collapsed, div .collapsed {
+.collapsed a, .collapsed a:visited,
+.collapsed a:active, .collapsed a:link
+{
     color:#003163;
     margin-left:0px;
+    cursor:pointer;cursor:hand;
 }
 
 .scarab-tooltip {
